--- a/src/App.css
+++ b/src/App.css
@@ -41,25 +41,52 @@ body, html {
   display: flex;
   align-items: center;
   position: absolute;
-  top: 20px;
-  left: 20px;
+  top: 10px;
+  left: 10px;
 }
 
 .logo-image {
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   margin-right: 5px;
 }
 
 .app-name {
   font-family: 'HighSpeed', sans-serif;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   color: #F87171;
+}
+
+@media (min-width: 768px) {
+  .logo {
+    top: 20px;
+    left: 20px;
+  }
+
+  .logo-image {
+    width: 50px;
+    height: 50px;
+  }
+
+  .app-name {
+    font-size: 1.5rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .logo-image {
+    width: 60px;
+    height: 60px;
+  }
+
+  .app-name {
+    font-size: 2rem;
+  }
 }
 
 .animated-text {
   font-family: 'Qanoar', sans-serif;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   font-weight: bold;
   background: linear-gradient(to right, #FDE68A, #F87171);
   -webkit-background-clip: text;
@@ -68,18 +95,27 @@ body, html {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  margin-top: 80px; 
+  margin-top: 60px; 
+}
+
+@media (min-width: 480px) {
+  .animated-text {
+    font-size: 1.5rem;
+    margin-top: 70px;
+  }
 }
 
 @media (min-width: 768px) {
   .animated-text {
-    font-size: 4rem;
+    font-size: 2.5rem;
+    margin-top: 80px;
   }
 }
 
 @media (min-width: 1024px) {
   .animated-text {
-    font-size: 3.6rem;
+    font-size: 3.5rem;
+    margin-top: 100px;
   }
 }
 
@@ -93,15 +129,22 @@ body, html {
 }
 
 .button {
-  padding: 20px 40px;
+  padding: 15px 30px;
   background-color: #EF4444;
   color: white;
   font-weight: bold;
-  font-size: 1.2rem;
+  font-size: 1rem;
   border: none;
   border-radius: 9999px;
   cursor: pointer;
   animation: pulse 2s infinite;
+}
+
+@media (min-width: 480px) {
+  .button {
+    padding: 20px 40px;
+    font-size: 1.2rem;
+  }
 }
 
 .button:hover {
@@ -121,6 +164,7 @@ body, html {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-top: 20px;
 }
 
 .dot {
@@ -130,6 +174,15 @@ body, html {
   border-radius: 50%;
   margin: 0 5px;
   animation: bounce 1s infinite;
+}
+
+@keyframes bounce {
+  0%, 100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-15px);
+  }
 }
 
 .dot:nth-child(2) {
@@ -142,22 +195,37 @@ body, html {
 
 .speed-container {
   display: flex;
-  justify-content: space-around;
-  margin-top: 20px;
+  flex-direction: column;
+  align-items: center;
   gap: 20px;
+  margin-top: 20px;
+}
+
+@media (min-width: 768px) {
+  .speed-container {
+    flex-direction: row;
+    justify-content: space-around;
+  }
 }
 
 .speed-card {
   background-color: rgba(0, 0, 0, 0); 
   border-radius: 10px;
   padding: 20px;
-  width: 45%; 
-  max-width: 45%;
+  width: 80%; 
+  max-width: 80%;
   color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
   border: 1px solid white;
+}
+
+@media (min-width: 768px) {
+  .speed-card {
+    width: 45%;
+    max-width: 45%;
+  }
 }
 
 .download-speed {
@@ -193,13 +261,20 @@ body, html {
   background-color: rgba(0, 0, 0, 0); 
   border-radius: 10px;
   padding: 10px;
-  width: 30%;
-  max-width: 30%;
+  width: 80%;
+  max-width: 80%;
   color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
   border: 1px solid white;
+}
+
+@media (min-width: 768px) {
+  .small-card {
+    width: 30%;
+    max-width: 30%;
+  }
 }
 
 .small-card h3 {
@@ -226,16 +301,28 @@ body, html {
 }
 
 .footer-logo {
-  width: 30px;
-  height: 30px;
-  margin-right: 10px;
+  width: 20px;
+  height: 20px;
+  margin-right: 5px;
 }
 
 .footer-text {
   font-family: 'HighSpeed', sans-serif;
-  font-size: 1rem;
+  font-size: 0.8rem;
   color: #F87171;
   margin-right: 10px;
+}
+
+@media (min-width: 480px) {
+  .footer-logo {
+    width: 30px;
+    height: 30px;
+    margin-right: 10px;
+  }
+
+  .footer-text {
+    font-size: 1rem;
+  }
 }
 
 .footer-right {
@@ -249,7 +336,7 @@ body, html {
 
 .footer-icon {
   color: white;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   margin: 0 5px;
   cursor: pointer;
 }
@@ -258,7 +345,13 @@ body, html {
   color: #F87171;
 }
 
-/* New Styles for Speed Summary Card */
+@media (min-width: 480px) {
+  .footer-icon {
+    font-size: 1.5rem;
+  }
+}
+
+
 .speed-card-summary {
   background-color: transparent;
   color: white;
@@ -280,25 +373,25 @@ body, html {
 }
 
 .very-slow {
-  background-color: #F87171; /* Red */
+  background-color: #F87171; 
 }
 
 .slow {
-  background-color: #FBBF24; /* Yellow */
+  background-color: #FBBF24;
 }
 
 .fine {
-  background-color: #FDE68A; /* Light Yellow */
+  background-color: #FDE68A; 
 }
 
 .good {
-  background-color: #6EE7B7; /* Green */
+  background-color: #6EE7B7; 
 }
 
 .great {
-  background-color: #34D399; /* Dark Green */
+  background-color: #34D399; 
 }
 
 .extremely-fast {
-  background-color: #10B981; /* Teal */
+  background-color: #10B981; 
 }
