--- a/src/App.css
+++ b/src/App.css
@@ -325,3 +325,32 @@ body, html {
 .extremely-fast {
   background-color: #10B981; 
 }
+
+
+.recheck-button {
+  margin-top: 20px;
+  background-color: #EF4444;
+  color: white;
+  font-weight: bold;
+  font-size: 1rem;
+  border: none;
+  border-radius: 9999px;
+  cursor: pointer;
+  animation: pulse 2s infinite;
+  padding: 15px 30px;
+}
+
+@media (min-width: 480px) {
+  .recheck-button {
+    padding: 20px 40px;
+    font-size: 1.2rem;
+  }
+}
+
+.recheck-button:hover {
+  background-color: #DC2626;
+}
+.generating-summary {
+  background-color: pink;
+  color: white;
+}
